@@ -40,6 +40,7 @@ Cobbler CHANGELOG
 - cobbler replicate command
 - added cobbler repo option --mirror-locally to reference external repos without mirroring
 - all virt parameters on profiles can now be overriden on cobbler profile objects
+- added some additional links for kickstart viewing/editing to the web page
 
 - ??? - 0.8.3
 - Make createrepo get run for local cobbler reposync invocations as needed
